--- a/.github/workflows/push-custom-branch.yaml
+++ b/.github/workflows/push-custom-branch.yaml
@@ -3,7 +3,7 @@ name: Deploy dev images to GHCR
 on:
   push:
     branches:
-      - 'tick-transactions-endpoints'
+      - 'feature/multiple-elastic-servers'
 
 jobs:
   push-store-image:
@@ -21,5 +21,5 @@ jobs:
 
       - name: 'Build Inventory Image'
         run: |
-          docker build . --tag ghcr.io/qubic/archive-query-service:tick-transactions-endpoints
-          docker push ghcr.io/qubic/archive-query-service:tick-transactions-endpoints
+          docker build . --tag ghcr.io/qubic/archive-query-service:snapshot
+          docker push ghcr.io/qubic/archive-query-service:snapshot
