--- a/.github/workflows/test-v1.yaml
+++ b/.github/workflows/test-v1.yaml
@@ -1,10 +1,19 @@
-on: [push, pull_request]
-name: Go Test
+on:
+  push:
+    paths:
+      - 'v1/**'
+    tags-ignore:
+      - '**'
+  pull_request:
+    paths:
+      - 'v1/**'
+
+name: Test v1
 jobs:
   test-nocache:
     strategy:
       matrix:
-        go-version: [1.22.x]
+        go-version: [1.24.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -13,4 +22,5 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
           cache: false
-      - run: go test ./...
+      - run: go test -p 1 ./...
+        working-directory: v1
