--- a/.github/workflows/test-v2.yaml
+++ b/.github/workflows/test-v2.yaml
@@ -2,15 +2,14 @@ on:
   push:
     paths:
       - 'v2/**'
-    tags-ignore:
-      - '**'
   pull_request:
     paths:
       - 'v2/**'
 
-name: Test v1
+name: Test v2
 jobs:
   test-nocache:
+    if: "!startsWith(github.ref, 'refs/tags/')"
     strategy:
       matrix:
         go-version: [1.24.x]
