--- a/.github/workflows/test-v1.yaml
+++ b/.github/workflows/test-v1.yaml
@@ -2,8 +2,6 @@ on:
   push:
     paths:
       - 'v1/**'
-    tags-ignore:
-      - '**'
   pull_request:
     paths:
       - 'v1/**'
@@ -11,6 +9,7 @@ on:
 name: Test v1
 jobs:
   test-nocache:
+    if: "!startsWith(github.ref, 'refs/tags/')"
     strategy:
       matrix:
         go-version: [1.24.x]
