--- a/.github/workflows/test-v2.yaml
+++ b/.github/workflows/test-v2.yaml
@@ -21,5 +21,7 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
           cache: false
+      - name: pull docker image
+        run: docker pull docker.elastic.co/elasticsearch/elasticsearch:8.10.2
       - run: go test -p 1 ./...
         working-directory: v2
