--- a/v2/Makefile
+++ b/v2/Makefile
@@ -5,16 +5,16 @@ PROTO_DIR := $(shell pwd)/api/archive-query-service/v2
 OPT_ARGS := $(shell [[ "$$(uname -s)" == "Darwin" && "$$(uname -m)" == "arm64" ]] && echo "--proto_path=/opt/homebrew/Cellar/protobuf/25.3_1/include")
 
 # Tasks
-.PHONY: all generate_mock generate_proto clean_proto generate_swagger perform_cover_test
+.PHONY: all mock-gen proto-gen proto-clean swagger-gen test-cover
 
-all: generate_mock generate_proto generate_swagger
-clean: clean_proto
+all: mock-gen proto-gen swagger-gen
+clean: proto-clean
 
-generate_mock:
+mock-gen:
 	@echo "Generating mocks..."
 	go generate ./...
 
-generate_proto:
+proto-gen:
 	@echo "Generating protobuf files..."
 	cd "$(PROTO_DIR)" && \
     protoc -I=. --go-grpc_out=paths=source_relative:. \
@@ -24,18 +24,18 @@ generate_proto:
         --grpc-gateway_opt generate_unbound_methods=true $(OPT_ARGS) \
     	--go_out=paths=source_relative:. *.proto
 
-clean_proto:
+proto-clean:
 	@echo "Cleaning protobuf files..."
 	cd "$(PROTO_DIR)" && \
     rm -f *.pb.go && \
     rm -f *.go
 
-generate_swagger:
+swagger-gen:
 	@echo "Generating openapi swagger files..."
 	cd "$(PROTO_DIR)" && \
 	protoc --openapiv2_out=logtostderr=true:. $(OPT_ARGS) \
-		*.proto
+		query_services.proto
 
-perform_cover_test:
+test-cover:
 	@echo "Performing Go cover test..."
 	go test ./... -coverprofile=cover.out && go tool cover -html=cover.out
