--- a/.github/workflows/test-v2.yaml
+++ b/.github/workflows/test-v2.yaml
@@ -35,8 +35,7 @@ jobs:
         with:
           go-version: 1.24.x
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v8
         with:
-          version: latest
+          version: v2.2
           working-directory: v2
-          config: v2/golangci-lint.yaml
