--- a/.github/workflows/test-v1.yaml
+++ b/.github/workflows/test-v1.yaml
@@ -21,5 +21,5 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
           cache: false
-      - run: go test -p 1 ./...
+      - run: go test -p 1 -tags ci ./...
         working-directory: v1
