--- a/.github/workflows/test-v1.yaml
+++ b/.github/workflows/test-v1.yaml
@@ -1,10 +1,10 @@
 on:
   push:
     paths:
-      - 'v1/**'
+      - 'legacy/**'
   pull_request:
     paths:
-      - 'v1/**'
+      - 'legacy/**'
 
 name: Test v1
 jobs:
@@ -22,4 +22,4 @@ jobs:
           go-version: ${{ matrix.go-version }}
           cache: false
       - run: go test -p 1 -tags ci ./...
-        working-directory: v1
+        working-directory: legacy
