Add 404 error codes (#66)
* Add 404 error codes for GetTransactionByHash and GetComputorsListsForEpoch

* If a transaction is requested by hash and not found we return 404 now.
* GetComputorsListsForEpoch: here we expect to find data for any valid epoch number.
* We don't return 404 for get transactions for tick (empty list is returned instead).
* We don't return 404 for get tick data because a missing tick data means an empty tick (if it is within a valid tick interval - checked in middleware).
* Add tests
* Delete old github workflow
* Fix v1/legacy github workflow
* Add github workflow for v2 branch build

--- a/.github/workflows/push-docker-snapshot-v2.yaml
+++ b/.github/workflows/push-docker-snapshot-v2.yaml
@@ -1,9 +1,9 @@
-name: Deploy v1 snapshot image to GHCR
+name: Deploy v2 prod images to GHCR
 
 on:
   push:
     branches:
-      - 'feature/update-v1-module-name'
+      - 'bugfix/v2-error-codes'
 
 jobs:
   docker-publish:
@@ -30,7 +30,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./v1
-          file: ./v1/Dockerfile
+          context: ./v2
+          file: ./v2/Dockerfile
           push: true
-          tags: ghcr.io/qubic/archive-query-service-v1:snapshot
+          tags: ghcr.io/qubic/archive-query-service-v2:snapshot
