--- a/.github/workflows/test-v1.yaml
+++ b/.github/workflows/test-v1.yaml
@@ -1,12 +1,18 @@
 on:
   push:
+    branches:
+      - main
     paths:
       - 'legacy/**'
   pull_request:
     paths:
       - 'legacy/**'
 
-name: Test v1
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+name: Test v1 (legacy)
 jobs:
   test-nocache:
     if: "!startsWith(github.ref, 'refs/tags/')"
@@ -23,3 +29,27 @@ jobs:
           cache: false
       - run: go test -p 1 -tags ci ./...
         working-directory: legacy
+  lint:
+    name: Lint v1 (legacy)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.25.x
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.6
+          working-directory: legacy
+  govulncheck:
+    runs-on: ubuntu-latest
+    name: Run govulncheck v1 (legacy)
+    steps:
+      - id: govulncheck
+        uses: golang/govulncheck-action@v1
+        with:
+          go-version-input: '1.25' # Change this to your project's Go version
+          go-package: ./...
+          work-dir: legacy
