added workflow to trigger api docs update

--- a/v2/Makefile
+++ b/v2/Makefile
@@ -2,7 +2,7 @@
 PROTO_DIR := $(shell pwd)/api/archive-query-service/v2
 
 # Apple arm64 specific
-OPT_ARGS := $(shell [ "$$(uname -s)" = "Darwin" ] && [ "$$(uname -m)" = "arm64" ] && echo "--proto_path=/opt/homebrew/Cellar/protobuf/25.3_1/include")
+OPT_ARGS := $(shell [ "$$(uname -s)" = "Darwin" ] && [ "$$(uname -m)" = "arm64" ] && echo "--proto_path=/opt/homebrew/Cellar/protobuf/33.1/include")
 
 # Tasks
 .PHONY: all mock-gen proto-gen proto-clean swagger-gen test-cover
@@ -28,12 +28,12 @@ proto-clean:
 	@echo "Cleaning protobuf files..."
 	cd "$(PROTO_DIR)" && \
     rm -f *.pb.go && \
-    rm -f *.go
+    rm -f *.pb.gw.go
 
 swagger-gen:
 	@echo "Generating openapi swagger files..."
 	cd "$(PROTO_DIR)" && \
-	protoc --openapiv2_out=logtostderr=true:. $(OPT_ARGS) \
+	protoc --openapiv2_out=logtostderr=true:. $(OPT_ARGS) -I "$(PROTO_DIR)" \
 		query_services.proto
 
 test-cover:
