--- a/v2/Makefile
+++ b/v2/Makefile
@@ -36,6 +36,11 @@ openapi-v3-gen:
 	cd "$(PROTO_DIR)" && \
 	protoc --openapi_out=output_mode=source_relative,default_response=false:. $(OPT_ARGS) -I "$(PROTO_DIR)" \
 		query_services.proto
+	@echo "Cleaning up OpenAPI spec..."
+	cd "$(PROTO_DIR)" && \
+	yq -i 'del(.paths."/health")' query_services.openapi.yaml && \
+	yq -i '(.tags[] | select(.name == "ArchiveQueryService")).x-scalar-ignore = true' query_services.openapi.yaml && \
+	yq -i '(.paths[][].tags) -= ["ArchiveQueryService"]' query_services.openapi.yaml
 
 test-cover:
 	@echo "Performing Go cover test..."
