chore: improve OpenAPI spec generation and add dev docs
- Add --indent 4 to yq commands to preserve consistent YAML indentation
- Hide Events (Beta) tag from Scalar docs with x-scalar-ignore
- Add dev dependencies section to README with cross-platform yq install instructions
- Regenerate OpenAPI spec

--- a/v2/Makefile
+++ b/v2/Makefile
@@ -38,9 +38,10 @@ openapi-v3-gen:
 		query_services.proto
 	@echo "Cleaning up OpenAPI spec..."
 	cd "$(PROTO_DIR)" && \
-	yq -i 'del(.paths."/health")' query_services.openapi.yaml && \
-	yq -i '(.tags[] | select(.name == "ArchiveQueryService")).x-scalar-ignore = true' query_services.openapi.yaml && \
-	yq -i '(.paths[][].tags) -= ["ArchiveQueryService"]' query_services.openapi.yaml
+	yq -i --indent 4 'del(.paths."/health")' query_services.openapi.yaml && \
+	yq -i --indent 4 '(.tags[] | select(.name == "ArchiveQueryService")).x-scalar-ignore = true' query_services.openapi.yaml && \
+	yq -i --indent 4 '(.tags[] | select(.name == "Events (Beta)")).x-scalar-ignore = true' query_services.openapi.yaml && \
+	yq -i --indent 4 '(.paths[][].tags) -= ["ArchiveQueryService"]' query_services.openapi.yaml
 
 test-cover:
 	@echo "Performing Go cover test..."
