--- a/v2/Makefile
+++ b/v2/Makefile
@@ -38,9 +38,9 @@ openapi-v3-gen:
 		query_services.proto
 	@echo "Cleaning up OpenAPI spec..."
 	cd "$(PROTO_DIR)" && \
-	yq -i 'del(.paths."/health")' query_services.openapi.yaml && \
-	yq -i '(.tags[] | select(.name == "ArchiveQueryService")).x-scalar-ignore = true' query_services.openapi.yaml && \
-	yq -i '(.paths[][].tags) -= ["ArchiveQueryService"]' query_services.openapi.yaml
+	yq -iy 'del(.paths."/health")' query_services.openapi.yaml && \
+	yq -iy '(.tags[] | select(.name == "ArchiveQueryService"))."x-scalar-ignore" = true' query_services.openapi.yaml && \
+	yq -iy '(.paths[][].tags) -= ["ArchiveQueryService"]' query_services.openapi.yaml
 
 test-cover:
 	@echo "Performing Go cover test..."
